<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/dolby_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="true"
        android:key="dolby_enable"
        android:title="@string/dolby_enable" />

    <ListPreference
        android:key="dolby_profile"
        android:entries="@array/dolby_profile_entries"
        android:entryValues="@array/dolby_profile_values"
        android:defaultValue="0"
        android:title="@string/dolby_profile_title"
        android:summary="%s"
        android:icon="@drawable/ic_dolby" />

    <PreferenceCategory
        android:title="@string/dolby_category_settings">

        <ListPreference
            android:key="dolby_preset"
            android:entries="@array/dolby_preset_entries"
            android:entryValues="@array/dolby_preset_values"
            android:title="@string/dolby_preset" />

        <SwitchPreference
            android:key="dolby_virtualizer"
            android:title="@string/dolby_virtualizer" />

        <ListPreference
            android:key="dolby_stereo"
            android:entries="@array/dolby_stereo_entries"
            android:entryValues="@array/dolby_stereo_values"
            android:defaultValue="4"
            android:title="@string/dolby_stereo_widening"
            android:dependency="dolby_virtualizer" />

        <ListPreference
            android:key="dolby_dialogue"
            android:entries="@array/dolby_dialogue_entries"
            android:entryValues="@array/dolby_dialogue_values"
            android:title="@string/dolby_dialogue_enhancer" />

        <SwitchPreference
            android:key="dolby_bass"
            android:title="@string/dolby_bass_enhancer" />

        <SwitchPreference
            android:key="dolby_volume"
            android:title="@string/dolby_volume_leveler" />

        <Preference
            android:key="dolby_reset"
            android:title="@string/dolby_reset_profile" />

    </PreferenceCategory>

</PreferenceScreen>
